--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-<!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Lyft</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+	<link href="https://file.myfontastic.com/itB5qJBMGkViNxiEcarVea/icons.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <script src="main.js"></script>
+</head>
+<body>
+	<section class= 'banner-top'>
+		<div class="header">
+			<img class="logo" src="assets/images/logo-white.png" width="50px">
+			<div class= 'options'>			
+				<a class= 'drive'>Drive</a>
+				<a class= 'explore'>Explore</a>
+				<a class= 'help'>Help</a>
+				<a class= 'login'>Log In</a>
+			</div>
+		</div>
+		<div class= 'side-form'>
+			<h1 class="form-title">TURN MILES</h1>
+			<h1>INTO MONEY</h1>
+			<h3>SIGN UP TO DRIVE WITH LYFT</h3>
+			<a class="phone-number">Phone number </a>
+			<div class="clicks">
+				<a class="drivers">Become a drive</a>
+				<a class="sign-up">Sign up to ride</a>
+			</div>
+			<p class= 'application'>Already aplied? Check the status of your application here</p>
+			<p class= 'learn-more'>Earn money for inviting friends to drive. Learn more.</p>
+		</div>
+	</section>
+	<section class= 'phone'>
+		<div class="phone-text">
+			<h2>A RIDE IN MINUTES</h2>
+			<p class= 'p1'>Request a ride and you'll be on your way in minutes</p>
+			<p class= 'p2'>Request.Ride.Repeat</p>
+			<h2 class="safety">SERIOUS ABOUT SAFETY</h2>
+			<p class= 'p3'>From knowing the colot of your driver's car to our 24/7</p>
+			<p class= 'p4'>Trust & Safety Terms, we got you.</p>
+			<h2 class="happy-drivers">HAPPY DRIVERS.</h2>
+			<h2 class="happy-riders">HAPPY RIDERS.</h2>
+			<p class= 'p5'>Ride with us and you'll see why 9 out of 10 rides end with five stars.</p>
+		</div>
+		<div class="cellphone">
+				<img class="mobile" src="assets/images/phone.png" width="450px" >
+		</div>
+	</section>
+	<section class= 'watch commercial'>
+		<div class= 'video1-text'>
+			<h4 class= 'text-box'>WATCH</h4>
+			<h2 class= 'text-box'>AMPLYFY YOUR RIDE</h2>
+			<p class= 'text-box'>Lyft's new emblem, Amp is the secret to smooth picups. Lighting up the dashboards nationwide, the device makes it easy for passengers and drives to find each other.
+			</p>
+		</div>
+		<iframe width="700px" height="475px" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		
+	</section>
+	<section class= 'watch june'>
+			<iframe width="700px" height="475px" src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<div class= 'video2-text'>
+				<h4 class= 'text-box'>WATCH</h4>
+				<h2 class= 'text-box'>JUNE</h2>
+				<p class= 'text-box'>In an animated short film by Academy Award-winner John Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride - and sharring her life, too.					
+				</p>
+			</div>
+	</section>
+	<section class= 'watch despacito'>
+			<div class= 'video1-text'>
+				<h4 class= 'text-box'>WATCH</h4>
+				<h2 class= 'text-box'>A GOOD THING GOING</h2>
+				<p class= 'text-box'>Launching on TV and online, "ride on the bright side" shows how Lyft continues to prioritize happy drivers, short ETAs, and safety.					
+				</p>
+			</div>
+			<iframe width="700px" height="475px" src="https://www.youtube.com/embed/hWYQvs6UrPs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</section>
+	<section class= 'footer-1'>
+		<lu class='log'>
+			<li class= 'list-log'>LOG IN</li>
+			<li class= 'list-log'>Help</li>
+			<li class= 'list-log'>Cities</li>
+			<li class= 'list-log'>Airports</li>
+			<li class= 'list-log'>Fare Estimate</li>
+		</lu>
+		<lu class='partner'>
+			<li class= 'list-partner'>PARTNER</li>
+			<li class= 'list-partner'>Partnershp</li>
+			<li class= 'list-partner'>Enterprise</li>
+			<li class= 'list-partner'>Ambassador</li>
+			<li class= 'list-partner'>Developers</li>
+		</lu>
+		<lu class= 'learn'>
+				<li class= 'list-learn'>LEARN</li>
+				<li class= 'list-learn'>Safety</li>
+				<li class= 'list-learn'>Blog</li>
+				<li class= 'list-learn'>Press</li>
+				<li class= 'list-learn'>Careers</li>
+		</lu>
+		<lu class= 'apps'>
+			<li>
+				<img class="apple-logo" width="100px" src="assets/images/apple-store.svg">
+			</li>
+			<li>
+				<img class="playstore-logo" width="100px" src="assets/images/google-play.png">
+			</li>
+			<li>
+				<img class="microsoft" width="100px" src="assets/images/microsoft.png">
+			</li>
+		</lu>
+	</section>
+	<section class= 'footer-2'>
+		<!-- SOCIAL MEDIA LOGOS AQUI-->
+		<a class="icon-facebook-circled"></a>
+		<a class="icon-instagrem"></a>
+		<a class="icon-twitter-circled"></a>
+		<p class= 'end'>© 2017 Lyft, Inc. TermsPrivacy</p>
+	</section>
+</body>
+</html>
